added background photo

--- a/main/index.html
+++ b/main/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body class="container-fluid">
     <style>
         body, html {
         overflow-x: hidden;
@@ -38,5 +38,13 @@
             </ul>
         </div>
     </nav>
+    <div class="landing-section">
+        <!-- <form>
+            <input type="text" class="form-control url-input" placeholder="Write your YT url here">
+        </form> -->
+        <div class="landing-image">
+            <img src="../images/landingBck.png">
+        </div>
+</div>
 </body>
 </html>
