--- a/result/result.html
+++ b/result/result.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="result.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-
-<div class="contact-section">
-
-  <h1>Contact Us</h1>
-  <div class="border"></div>
-  <div class="youtube">
-    <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-    </div>  </div>
-  <form class="contact-form" action="index.html" method="post">
-    <textarea class="contact-form-text" placeholder="Your message"></textarea>
-    <input type="submit" class="contact-form-btn" value="Send">
-  </form>
-</div>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Contact Us form</title>
+	<link rel="stylesheet" href="result.css">
+</head>
+<body>
+	
+<div class="wrapper">
+  <div class="contact-form">
+    <div class="input-fields msg">
+      <textarea placeholder="Summary!"></textarea>
+    </div>
+    <div class="msg input-fields">
+      <input type="text" class="input" placeholder="Enter keyword">
+      <div class="btn">Search Keyword</div>
+    </div>
+  </div>
+</div>	
 
 
-  </body>
+</body>
 </html>
